fixed responsiveness and image overflow

--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,5 +1,5 @@
 .form {
-  width: 700px;
+  height: auto;
   background: linear-gradient(
       135deg,
       transparent 21px,
