--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(135deg, #3e4f7e 0%, #5e6969 50%, #ffffff 100%);
-  height: 100vh;
 }
 
 code {
